# determinisk

./: .dockerignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  build-docker.sh  docker-compose.yml  plan.md
.cargo/: config.toml
determinisk-core/: Cargo.toml
determinisk-core/examples/: benchmark.rs  collision_demo.rs  determinism_proof.rs  energy_conservation.rs  multiple_balls.rs  orbit.rs  orbit_simple.rs  pendulum.rs  projectile.rs  run_from_toml.rs  simple_drop.rs  test_determinism.rs  toml_prove_visual.rs  toml_visual.rs
determinisk-core/scenarios/: pool_break.toml  pool_break_small.toml  simple_drop.toml  test_risc0.toml
determinisk-core/src/: lib.rs  runner.rs  tests.rs
determinisk-core/src/math/: mod.rs  scalar.rs  vec2.rs
determinisk-core/src/physics/: circle.rs  collision.rs  mod.rs  world.rs
determinisk-core/src/render/: visualizer.rs
determinisk-core/src/scenarios/: mod.rs  pool_break.rs  pool_break_15.rs  pool_break_sim.rs  simple_drop.rs  simple_drop_sim.rs  three_body_collision.rs
determinisk-core/src/spatial/: mod.rs
determinisk-core/src/state/: mod.rs
determinisk-core/tests/: determinism_tests.rs  integration_tests.rs  performance_tests.rs  physics_tests.rs
determinisk-risc0/: Cargo.toml
determinisk-risc0/examples/: verify_physics.rs  verify_physics_full.rs
determinisk-risc0/host/: Cargo.toml
determinisk-risc0/host/src/: main.rs  main_simple.rs  main_unified.rs  test_minimal.rs
determinisk-risc0/methods/: Cargo.toml
determinisk-risc0/methods/guest/: Cargo.toml
determinisk-risc0/methods/guest/.cargo/: config.toml
determinisk-risc0/methods/guest/src/: main.rs  main_simple.rs
determinisk-runner/: Cargo.toml  input.toml
determinisk-runner/src/: lib.rs  main.rs  runner.rs
determinisk-runner/src/proof/: mock.rs  mod.rs
determinisk-runner/src/render/: mod.rs  visualizer.rs
determinisk-sp1/: Cargo.toml
determinisk-sp1/program/: Cargo.toml
determinisk-sp1/program/src/: main.rs
determinisk-sp1/script/: Cargo.toml
determinisk-sp1/script/src/: main.rs
