[workspace]
resolver = "2"
members = [
    "determinisk-core",
    "determinisk-runner",
]
exclude = [
    "determinisk-risc0",
    "determinisk-sp1",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Determinisk Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/determinisk/determinisk"

[workspace.dependencies]
# Core dependencies
fixed = { version = "1.28", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"

# zkVM dependencies
risc0-zkvm = { version = "2.3" }
sp1-sdk = { version = "5.2" }

# Testing dependencies
proptest = "1.5"
criterion = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.zkvm]
inherits = "release"
opt-level = "z"