[package]
name = "determinisk-core"
version = "0.1.0"
edition = "2021"
authors = ["Evgenii Tsvigun <gene@chainhackers.xyz>"]
license = "MIT"
repository = "https://github.com/utgarda/determinisk"
description = "Deterministic 2D physics engine for zkVM"

[dependencies]
fixed = { version = "1.28", default-features = false, features = ["serde"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
sha2 = { version = "0.10", default-features = false }

[dev-dependencies]
proptest = "1.5"
criterion = "0.5"

[features]
default = ["std"]
std = ["fixed/std", "serde/std", "sha2/std"]

[[example]]
name = "simple_drop"

[[example]]
name = "multiple_balls"

[[example]]
name = "projectile"

[[example]]
name = "pendulum"

[[example]]
name = "energy_conservation"

[[example]]
name = "determinism_proof"

[[example]]
name = "benchmark"

[[example]]
name = "orbit"

[[example]]
name = "orbit_simple"

