[package]
name = "determinisk-core"
version = "0.1.0"
edition = "2021"
authors = ["Evgenii Tsvigun <gene@chainhackers.xyz>"]
license = "MIT"
repository = "https://github.com/utgarda/determinisk"
description = "Deterministic 2D physics engine for zkVM"

[dependencies]
fixed = { version = "1.28", default-features = false, features = ["serde"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", optional = true }
sha2 = { version = "0.10", default-features = false }
macroquad = { version = "0.4", optional = true }
toml = { version = "0.8", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
clap = { version = "4", features = ["derive"], optional = true }
bincode = { version = "1.3", optional = true }
dotenv = { version = "0.15", optional = true }
risc0-zkvm = { version = "^2.3.1", optional = true }
hex = { version = "0.4", optional = true }

[dev-dependencies]
proptest = "1.5"
criterion = "0.5"
macroquad = "0.4"

[features]
default = ["std"]
std = ["fixed/std", "serde/std", "sha2/std", "serde_json", "toml"]
visual = ["macroquad", "std"]
runner = ["std", "tokio", "serde_json", "toml"]
prove = ["std", "clap", "bincode", "dotenv", "toml", "serde_json"]
risc0 = ["risc0-zkvm", "hex", "bincode"]
sp1 = []

[[example]]
name = "multiple_balls"

[[example]]
name = "projectile"

[[example]]
name = "pendulum"

[[example]]
name = "energy_conservation"

[[example]]
name = "determinism_proof"

[[example]]
name = "benchmark"

[[example]]
name = "orbit"

[[example]]
name = "orbit_simple"

[[example]]
name = "sim_runner"

[[bin]]
name = "prove-toml"
required-features = ["prove"]

