[package]
name = "determinisk-core"
version = "0.1.0"
edition = "2021"
authors = ["Evgenii Tsvigun <gene@chainhackers.xyz>"]
license = "MIT"
repository = "https://github.com/utgarda/determinisk"
description = "Deterministic 2D physics engine for zkVM"

[dependencies]
fixed = { version = "1.28", default-features = false, features = ["serde"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", optional = true }
sha2 = { version = "0.10", default-features = false }
toml = { version = "0.8", optional = true }

[dev-dependencies]
proptest = "1.5"
criterion = "0.5"
macroquad = "0.4"

[features]
default = ["std"]
std = ["fixed/std", "serde/std", "sha2/std", "serde_json", "toml"]

[[example]]
name = "multiple_balls"

[[example]]
name = "projectile"

[[example]]
name = "pendulum"

[[example]]
name = "energy_conservation"

[[example]]
name = "determinism_proof"

[[example]]
name = "benchmark"

[[example]]
name = "orbit"

[[example]]
name = "orbit_simple"


