[package]
name = "determinisk-runner"
version = "0.1.0"
edition = "2021"
authors = ["Determinisk Contributors"]
license = "MIT OR Apache-2.0"
description = "Runner for determinisk physics simulations with visualization and zkVM proving"

[dependencies]
# Core physics
determinisk-core = { path = "../determinisk-core" }

# zkVM backends
methods = { path = "../determinisk-risc0/methods", optional = true }
risc0-zkvm = { version = "2.3", optional = true, features = ["cuda"] }

# Visualization
macroquad = { version = "0.4", optional = true }

# CLI and runtime
clap = { version = "4", features = ["derive"] }
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
hex = "0.4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = ["visual"]
visual = ["macroquad"]
risc0 = ["methods", "risc0-zkvm"]
sp1 = []    # Feature flag for SP1 support (implementation pending)

[[bin]]
name = "runner"
path = "src/main.rs"

[[bin]]
name = "visual"
path = "src/bin/visual.rs"
required-features = ["visual"]