[package]
name = "host"
version = "0.1.0"
edition = "2021"

[[example]]
name = "verify_physics"
path = "../examples/verify_physics.rs"

[[example]]
name = "verify_physics_full"
path = "../examples/verify_physics_full.rs"

[[bin]]
name = "host-unified"
path = "src/main_unified.rs"

[[bin]]
name = "test-minimal"
path = "src/test_minimal.rs"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { version = "^2.3.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
determinisk-core = { path = "../../determinisk-core" }
hex = "0.4"
bincode = "1.3"
